Closed
Bug 406168
Opened 12 years ago
Closed 12 years ago
Infinite loop when opening JS console
Categories
(Core :: Disability Access APIs, defect, critical)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
Details
(Keywords: access, crash, regression)
Attachments
(1 file)
8.33 KB,
patch
|
evan.yan
:
review+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
I wasn't able to get this every time, but I have a stack and understand the issue. It's a regression from bug 385070. What happens is that nsAccessNode::Init() get's the parent's child count, and that causes a reentry error if the reason we're initting that nsAccessNode is it's being created to get the parent's child count.
Assignee | ||
Comment 1•12 years ago
|
||
Attachment #290877 -
Flags: review?(surkov.alexander)
Comment on attachment 290877 [details] [diff] [review] Prevent reentry looks good.
Attachment #290877 -
Flags: review+
Assignee | ||
Updated•12 years ago
|
Attachment #290877 -
Flags: review?(surkov.alexander) → approval1.9?
Updated•12 years ago
|
Attachment #290877 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Updated•12 years ago
|
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•