Bug 406168. Infinite loop when opening JS console, r=evan.yan, a=schrep