accessible/src/xforms/nsXFormsAccessible.cpp
@@ -114,6 +114,7 @@ nsXFormsAccessible::CacheSelectChildren(nsIDOMNode *aContainerNode)
   if (mAccChildCount != eChildCountUninitialized)
     return;
 
+  mAccChildCount = 0; // Avoid reentry
   nsIAccessibilityService *accService = GetAccService();
   if (!accService)
     return;
